# example-plugin

./: .pre-commit-config.yaml  pyproject.toml
src/: print_http_method.py  s3_region_check_plugin.py
tests/integration/: test_get_bucket_region_plugin.py
tests/unit/: test_get_bucket_region_plugin.py  test_print_http_method.py
